# ChangeLog for squashmount

*squashmount-19.1:
	Martin Väth <martin at mvath.de>:
	- Introduce print-mtime
	- Output mtime of squashed file with squashmount -vv status

*squashmount-19.0.2:
	Martin Väth <martin at mvath.de>:
	- Avoid wrong linebreak in manpage

*squashmount-19.0.1:
	Martin Väth <martin at mvath.de>:
	- Fix quoting in manpage

*squashmount-19:
	Martin Väth <martin at mvath.de>:
	- Add -o index=off to MOUNT_OVERLAY default

*squashmount-18.2.1:
	Martin Väth <martin at mvath.de>:
	- Fix variable name which contains LAZY, LSOF, LSOF_RO
	  (in 18.2 they were simply ignored due to this bug).

*squashmount-18.2
	Martin Väth <martin at mvath.de>:
	- Change $lsof_ro default to 1 since sometimes (e.g. for
	  /usr/lib*/firefox) umounting can fail even if lsof shows that only
	  readonly directory is accessed. On the other hand, for
	  /usr/share/texmf-dist the opposite is the case. Therefore:
	- Provide LAZY, LSOF, LSOF_RO to override $lazy, $lsof, $lsof_ro
	  for individual mount points. The command line options --lazy, --lsof,
	  and --lsof-ro override all these configurations.

*squashmount-18.1
	Martin Väth <martin at mvath.de>:
	- Provide --root to deal with root directory information
	- Provide --bind which can manage bind-bounds flexible
	- The misguided --chroot from squashmount-18 has been removed.
	  Use instead --root, supplemented with appropriate --bind options.
	- Write data in /run/squashmount sorted for easier comparison
	- Allow non-absolute paths in options
	- Fix/improve zsh completion for --color and --rundir

*squashmount-18
	Martin Väth <martin at mvath.de>:
	- Detect root directory change and support override by --chroot

*squashmount-17.1_p2
	Martin Väth <martin at mvath.de>:
	- Improve demo.svg: add example for modified but not resquashing

*squashmount-17.1_p1
	Martin Väth <martin at mvath.de>:
	- Improve README.md5, add demo.svg

*squashmount-17.1
	Martin Väth <martin at mvath.de>:
	- Do not print confusing warnings in File::Find