@@ -1,5 +1,14 @@
 # ChangeLog for squashmount
 
+*squashmount-20.0:
+	Martin Väth <martin at mvath.de>:
+	- Support https://github.com/AgentD/squashfs-tools-ng
+	  BEWARE: For me, this new tool does not work for unknown reasons:
+	  tar2sqfs produces files unreadable by the kernel or by unsquashfs
+	  (no matter whether squashfs-root is a parent directory), and
+	  sqfs2tar segfaults on files generated by mksquashfs.
+	  However, I added (untested) support for users without such problems.
+
 *squashmount-19.1:
 	Martin Väth <martin at mvath.de>:
 	- Introduce print-mtime
